IND - Fix  product name text-align.

--- a/skin/frontend/indexliving/default/css/styles.css
+++ b/skin/frontend/indexliving/default/css/styles.css
@@ -5154,7 +5154,7 @@ body.catalogsearch-result-index .page-title h1 {
 .block-highlight .flip-container, .block-highlight .flip-container .front, .block-highlight .flip-container .back {
 	width: 100%;
 	height: 100%;
-	min-height:195px;
+	min-height:200px;
 }
 
 .block-highlight #bestseller-product-list .flip-container, .block-highlight #bestseller-product-list .flip-container .front, .block-highlight #bestseller-product-list .flip-container .back {
